--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
@@ -82,7 +82,7 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-lista-chequeo-rapg></app-lista-chequeo-rapg>
+            <app-lista-chequeo-rapg [contratoPoliza]="contratoPoliza"></app-lista-chequeo-rapg>
         </mat-expansion-panel>
     </mat-accordion>
     <mat-accordion>
