--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/revision-aprobacion-rapg/revision-aprobacion-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/revision-aprobacion-rapg/revision-aprobacion-rapg.component.html
@@ -12,7 +12,7 @@
                                 <label  class="label-left"
                                         for="fechaRevision"
                                         [ngClass]="{ 'color-secondaryColor': addressForm.controls.fechaRevision.invalid }">
-                                        Fecha de la revisión 2</label>
+                                        Fecha de la revisión {{ contratoPolizaActualizacionRevisionAprobacionObservacion.length + 1 }} </label>
                             </div>
                             <div class="col d-flex align-items-center">
                                 <mat-form-field class="example-full-width">
@@ -52,12 +52,12 @@
                                 <label  class="label-left"
                                         for="estadoRevision"
                                         [ngClass]="{ 'color-secondaryColor': addressForm.controls.estadoRevision.invalid }">
-                                        Estado de la revisión 2</label>
+                                        Estado de la revisión {{ contratoPolizaActualizacionRevisionAprobacionObservacion.length + 1 }} </label>
                             </div>
                             <div class="col">
                                 <mat-form-field class="select-width">
                                     <mat-select formControlName="estadoRevision" required>
-                                        <mat-option *ngFor="let estadoRevision of estadoArray" [value]="estadoRevision">
+                                        <mat-option *ngFor="let estadoRevision of estadoArray" [value]="estadoRevision.codigo">
                                             {{ estadoRevision.nombre }}
                                         </mat-option>
                                     </mat-select>
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="animatedDown" *ngIf="addressForm.controls.estadoRevision.value && addressForm.controls.estadoRevision.value.codigo == '2'">
+                <div class="animatedDown" *ngIf="addressForm.get( 'estadoRevision' ).value === enAprobacion">
                     <h2 class="card-subTitle">Aprobación</h2>
                     <div class="row">
                         <div class="col-md-8">
@@ -131,9 +131,8 @@
                                 <div class="col">
                                     <mat-form-field class="select-width">
                                         <mat-select formControlName="responsableAprob" required>
-                                            <mat-option *ngFor="let responsableAprob of listaUsuarios"
-                                                [value]="responsableAprob">
-                                                {{ responsableAprob.nombres }} {{ responsableAprob.apellidos }}
+                                            <mat-option *ngFor="let responsable of listaUsuarios" [value]="responsable.usuarioId">
+                                                {{ firstLetterUpperCase( responsable.primerNombre ) }} {{ firstLetterUpperCase( responsable.primerApellido ) }}
                                             </mat-option>
                                         </mat-select>
                                     </mat-form-field>
@@ -157,14 +156,14 @@
     <div class="d-flex align-items-center">
         <div    class="text-area-quill  izqTitle helperWidthText"
                 [class.color-secondaryColor]="(addressForm.get('observacionesGenerales').invalid && addressForm.get('observacionesGenerales').touched) || (addressForm.get('observacionesGenerales').invalid && estaEditando)">
-          <label for="observacionesGenerales" class="text-area-quill--label">Observaciones generales</label>
-          <quill-editor class="quill-editor-style"
-                        [styles]="editorStyle"
-                        [modules]="config"
-                        #observaciones
-                        (onContentChanged)="maxLength($event, 2000)"
-                        formControlName="observacionesGenerales">
-          </quill-editor>
+        <label for="observacionesGenerales" class="text-area-quill--label">Observaciones generales</label>
+        <quill-editor class="quill-editor-style"
+                      [styles]="editorStyle"
+                      [modules]="config"
+                      #observaciones
+                      (onContentChanged)="maxLength($event, 2000)"
+                      formControlName="observacionesGenerales">
+        </quill-editor>
         </div>
         <span class="contador miles" *ngIf="addressForm.get( 'observacionesGenerales' ).value">
             {{ 2000 - ( textoLimpio( observaciones.quillEditor, 2000 ) ) }}
@@ -173,19 +172,24 @@
             2000
         </span>
         <span class="icon-incompleto">
-          <img  class="icon-incompleto--img"
-                src="assets/img/icon/incompleto.svg"
-                alt="este campo es requerido"
-                [matTooltipPosition]="'above'"
-                matTooltip="Debe ingresar la información en el campo para continuar"
-                matTooltipClass="info-tooltip"
-                *ngIf="(addressForm.get('observacionesGenerales').invalid && addressForm.get('observacionesGenerales').touched) || (addressForm.get('observacionesGenerales').invalid && estaEditando)">
+            <img    class="icon-incompleto--img"
+                    src="assets/img/icon/incompleto.svg"
+                    alt="este campo es requerido"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip"
+                    *ngIf="(addressForm.get('observacionesGenerales').invalid && addressForm.get('observacionesGenerales').touched) || (addressForm.get('observacionesGenerales').invalid && estaEditando)">
         </span>
-      </div>
-   <app-tabla-observaciones-rev-aprob-rapg></app-tabla-observaciones-rev-aprob-rapg>
+    </div>
+
+    <app-tabla-observaciones-rev-aprob-rapg [historialObservaciones]="contratoPolizaActualizacionRevisionAprobacionObservacion" *ngIf="contratoPolizaActualizacionRevisionAprobacionObservacion.length > 0"></app-tabla-observaciones-rev-aprob-rapg>
     <div class="text-center mb-2em">
-        <button mat-button color="warn" class="btn-guardar" type="submit">
-          <img src="assets/img/icon/guardar.svg" alt="Regresar" />
+        <button mat-button
+                color="warn"
+                class="btn-guardar"
+                type="submit"
+                [disabled]="checkDisabledBtn()">
+                <img src="assets/img/icon/guardar.svg" alt="Regresar">
         </button>
     </div>
 </form>
