--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/actualizar-poliza-rapg/actualizar-poliza-rapg.component.html
@@ -5,7 +5,7 @@
         </a>
     </div>
     <h1 class="title-menu--h1">
-        {{ esRegistroNuevo === true ? 'Actualizar' : 'Ver detalle/Editar' }} póliza de contrato N801801
+        {{ esRegistroNuevo === true ? 'Actualizar' : 'Ver detalle/Editar' }} póliza de contrato {{ contratoPoliza.contrato.numeroContrato }}
     </h1>
     <mat-card class="shipping-card mainGris">
         <mat-card-content style="text-align: left;">
@@ -93,7 +93,7 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <app-revision-aprobacion-rapg></app-revision-aprobacion-rapg>
+            <app-revision-aprobacion-rapg [contratoPoliza]="contratoPoliza"></app-revision-aprobacion-rapg>
         </mat-expansion-panel>
     </mat-accordion>
     <div style="margin-top: 1em;">
