--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/tabla-observaciones-rev-aprob-rapg/tabla-observaciones-rev-aprob-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/tabla-observaciones-rev-aprob-rapg/tabla-observaciones-rev-aprob-rapg.component.html
@@ -3,21 +3,21 @@
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="fechaRevision">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de revisión</th>
-                <td mat-cell *matCellDef="let element"> <b>{{element.fechaRevision}}</b></td>
+                <td mat-cell *matCellDef="let element"> <b> {{ element.segundaFechaRevision | date: 'dd/MM/yyyy' }} </b></td>
             </ng-container>
             <ng-container matColumnDef="observacion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Observaciones generales</th>
                 <td mat-cell *matCellDef="let element">
-                    <div [innerHtml]="element.observacion"></div>
+                    <div [innerHtml]="element.observacionGeneral !== undefined ? element.observacionGeneral : ''"></div>
                 </td>
             </ng-container>
             <ng-container matColumnDef="estadoRevisionCodigo">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado de la revision</th>
                 <td mat-cell *matCellDef="let element">
-                    <div *ngIf="element.estadoRevisionCodigo=='1'">
+                    <div *ngIf="element.estadoSegundaRevision === estadosRevision.devuelta">
                         Devuelta
                     </div>
-                    <div *ngIf="element.estadoRevisionCodigo=='2'">
+                    <div *ngIf="element.estadoSegundaRevision === estadosRevision.aprobacion">
                         Aprobada
                     </div>
                 </td>
